--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.7",
+    "react-use": "^17.3.2",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
